--- a/styles.css
+++ b/styles.css
@@ -9,5 +9,50 @@
 }
 
 * {
-  font-family: "Minion", Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+img {
+  height: 50rem;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.iframe-wrapper {
+  position: relative;
+}
+
+.contact-box {
+  display: flex;
+}
+
+.contact-box a {
+  margin-left: 0.2rem;
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
