--- a/styles.css
+++ b/styles.css
@@ -9,42 +9,45 @@
 }
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Minion", Arial, Helvetica, sans-serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  font-size: 2rem;
 }
 
 img {
-  height: 50rem;
+  top: 10px;
 }
 
 iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+  display: block; /* iframes are inline by default */
+  background: #000;
+  border: none; /* Reset default border */
+  height: 100vh; /* Viewport-relative units */
 }
 
-.iframe-wrapper {
-  position: relative;
+.image-wrapper {
+  width: 20rem;
+  height: 10rem;
+  margin-top: 15rem;
+  margin-bottom: 15rem;
 }
 
 .contact-box {
   display: flex;
 }
 
-.contact-box a {
-  margin-left: 0.2rem;
+.contact {
+  margin-bottom: 15rem;
 }
 
 .sr-only:not(:focus):not(:active) {
