--- a/styles.css
+++ b/styles.css
@@ -38,16 +38,31 @@ iframe {
 .image-wrapper {
   width: 20rem;
   height: 10rem;
-  margin-top: 15rem;
-  margin-bottom: 15rem;
 }
 
 .contact-box {
   display: flex;
 }
 
-.contact {
-  margin-bottom: 15rem;
+.top-banner {
+  width: 100%;
+  background-color: #000;
+  color: white;
+  display: flex;
+  justify-content: center;
+}
+.logo {
+  height: 50px;
+  margin: 1rem 0;
+}
+
+.bottom-of-page {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .sr-only:not(:focus):not(:active) {
