--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100%;
 }
 
 a {
@@ -32,16 +33,21 @@ iframe {
   display: block; /* iframes are inline by default */
   background: #000;
   border: none; /* Reset default border */
-  height: 100vh; /* Viewport-relative units */
+  height: 92.5vh; /* Viewport-relative units */
 }
 
-.image-wrapper {
-  width: 20rem;
-  height: 10rem;
+p {
+  max-width: 50rem;
+  font-size: 1.25rem;
 }
 
-.contact-box {
-  display: flex;
+.executive-producer {
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.contact {
+  margin-top: 2rem;
 }
 
 .top-banner {
@@ -50,15 +56,21 @@ iframe {
   color: white;
   display: flex;
   justify-content: center;
+  height: 7.5vh;
 }
+
 .logo {
   height: 50px;
   margin: 1rem 0;
 }
 
+.smaller-text {
+  font-size: 1.5rem;
+}
+
 .bottom-of-page {
   height: 100vh;
-  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,3 +86,10 @@ iframe {
   white-space: nowrap;
   width: 1px;
 }
+
+/* .image-wrapper {
+  transition: transform 2000ms ease-in-out;
+}
+.image-wrapper-grow {
+  transform: scale(2); */
+/* } */
