--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,16 @@ li {
 .bottom-line {
   margin-bottom: 3rem;
 }
+
+/* Triangle */
+
+.polygon-clip-triangle-isoceles {
+  -webkit-clip-path: polygon(0% 87%, 50% 0%, 50% 0%, 100% 87%);
+  clip-path: polygon(10% 0, 100% 100%, 0 100%);
+  -webkit-clip-path: url("#polygon-clip-triangle-isoceles");
+  clip-path: url("#polygon-clip-triangle-isoceles");
+}
+.triangle-wrap {
+  background-color: #fff;
+  width: 100vw;
+}
