Update bio and styles

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
-@font-face {
-  font-family: Minion;
-  src: url(./fonts//MinionPro-Regular.otf);
+:root {
+  --font-size: 1.25rem;
+  --page-width: 50rem;
 }
 
 @font-face {
@@ -10,6 +10,14 @@
 
 * {
   font-family: "Trebuchet", Arial, sans-serif;
+}
+
+a,
+h3,
+p,
+ul,
+span {
+  font-size: var(--font-size);
 }
 
 body {
@@ -22,7 +30,6 @@ body {
 a {
   text-decoration: none;
   color: #000;
-  font-size: 2rem;
   line-height: normal;
 }
 
@@ -34,36 +41,26 @@ iframe {
   display: block; /* iframes are inline by default */
   background: #000;
   border: none; /* Reset default border */
-  height: 92.5vh; /* Viewport-relative units */
+  height: 93vh; /* Viewport-relative units */
 }
 
 p {
-  max-width: 50rem;
-  font-size: 1.25rem;
+  width: var(--page-width);
   margin-bottom: 1.5rem;
-}
-
-ul {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  height: 36rem;
-  list-style: none;
-  align-self: center;
-  font-size: 1.25rem;
-  padding-left: 0;
-  width: 100%;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  hyphens: auto;
+  text-align: left;
 }
 
 li {
   /* width: 16rem; */
 }
 
+.contact {
+  margin-bottom: 0.75rem;
+}
+
 .previous-clients {
-  margin-bottom: 0;
+  font-weight: 800;
+  margin-bottom: 1.5rem;
   align-self: flex-start;
 }
 
@@ -86,10 +83,6 @@ li {
   margin: 1rem 0;
 }
 
-.smaller-text {
-  font-size: 1.5rem;
-}
-
 .phone-number {
   margin-bottom: 5rem;
 }
@@ -101,10 +94,36 @@ li {
   justify-content: center;
 }
 
-.client-list {
+.client-list-wrapper {
   display: flex;
   flex-direction: column;
   width: 60rem;
+  margin-bottom: 3rem;
+  margin-left: 7.5em;
+}
+
+.clients-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 36rem;
+  list-style: none;
+  align-self: center;
+  padding-left: 0;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  hyphens: auto;
+}
+
+.image-wrapper {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.highlight-list {
+  max-width: var(--page-width);
+  margin-bottom: 6em;
 }
 
 .sr-only:not(:focus):not(:active) {
@@ -115,17 +134,4 @@ li {
   position: absolute;
   white-space: nowrap;
   width: 1px;
-}
-
-.image-wrapper {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
-.penultimate-line {
-  margin-bottom: 0;
-}
-
-.bottom-line {
-  margin-bottom: 3rem;
 }
