--- a/styles.css
+++ b/styles.css
@@ -37,27 +37,10 @@ img {
   top: 10px;
 }
 
-iframe {
-  display: block; /* iframes are inline by default */
-  background-color: #000;
-  border: none; /* Reset default border */
-  height: 93vh; /* Viewport-relative units */
-}
-
-.iframe-wrapper {
-  background-color: #000;
-  width: 100%;
-  height: 100vh;
-}
-
 p {
   width: var(--page-width);
   margin-bottom: 1.5rem;
   text-align: left;
-}
-
-li {
-  /* width: 16rem; */
 }
 
 iframe {
@@ -66,6 +49,16 @@ iframe {
   border: none; /* Reset default border */
   height: 92.5vh; /* Viewport-relative units */
   position: relative;
+}
+
+.top-half {
+  height: 100vh;
+}
+
+.iframe-wrapper {
+  background-color: #000;
+  width: 100%;
+  height: calc(100% - 4.5em);
 }
 
 .previous-clients {
@@ -77,10 +70,6 @@ iframe {
 .logo {
   height: 50px;
   margin: 1rem 0;
-}
-
-.smaller-text {
-  font-size: 1.5rem;
 }
 
 .phone-number {
@@ -105,7 +94,7 @@ iframe {
 .outside {
   position: relative;
   width: 100vw;
-  height: 93%;
+  height: 100%;
   background: white;
   clip-path: polygon(45% 35%, 55% 35%, 50% 52.5%);
   animation: 3s ease-in 0.75s forwards grow;
@@ -157,7 +146,7 @@ iframe {
   color: white;
   display: flex;
   justify-content: center;
-  height: 4.5rem;
+  height: 4.5em;
 }
 
 .bottom-of-page {
@@ -202,4 +191,10 @@ iframe {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+@media only screen and (max-width: 768px) {
+  .iframe-wrapper {
+    height: 100%;
+  }
 }
