--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
   --font-size: 1.25rem;
   --page-width: 50rem;
+  --top-banner-height: 4.5rem;
 }
 
 @font-face {
@@ -57,8 +58,8 @@ iframe {
 
 .iframe-wrapper {
   background-color: #000;
-  width: 100%;
-  height: calc(100% - 4.5em);
+  width: calc(100vw - 15px);
+  height: calc(100% - var(--top-banner-height));
 }
 
 .previous-clients {
@@ -93,7 +94,6 @@ iframe {
 
 .outside {
   position: relative;
-  width: 100vw;
   height: 100%;
   background: white;
   clip-path: polygon(45% 35%, 55% 35%, 50% 52.5%);
@@ -121,6 +121,10 @@ iframe {
   100% {
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     background: black;
+    top: 10px;
+    left: 0px;
+    right: 0px;
+    bottom: 15px;
   }
 }
 
@@ -130,10 +134,6 @@ iframe {
 
 .polygon-clip-triangle-isoceles:before {
   border: 10px solid white;
-}
-.triangle-wrap {
-  background-color: #fff;
-  width: 100vw;
 }
 
 .contact {
@@ -146,7 +146,7 @@ iframe {
   color: white;
   display: flex;
   justify-content: center;
-  height: 4.5em;
+  height: var(--top-banner-height);
 }
 
 .bottom-of-page {
