--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,12 @@ iframe {
 
 .top-half {
   height: 100vh;
-  width: 100vw;
+  width: calc(100vw - 15px);
 }
 
 .iframe-wrapper {
   background-color: #000;
-  width: 100vw;
+  width: calc(100vw - 15px);
   height: calc(100% - var(--top-banner-height));
 }
 
